phase-2/week-3/lab-3/manifests/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  namespace: lab2
  labels:
    app.kubernetes.io/name: demo-app
    app.kubernetes.io/part-of: week3-kubernetes
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - app.local
      secretName: app-local-tls

  rules:
    - host: app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app
                port:
                  number: 80
